<resources>
    <string name="app_name">My Inventory App</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_data">Delete all data</string>

    <string name="editor_activity_title_add_product">Add new product</string>
    <string name="editor_activity_title_edit_product">Edit a product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="empty_view_title_text">It\'s seems there is now products here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="product_name">Product Name: </string>
    <string name="product_price">Product Price: </string>
    <string name="ordered_qty">Ordered Quantity: </string>
    <string name="sale_qty">Sale Quantity: </string>
    <string name="current_qty">Current Quantity: </string>
    <string name="sale_btn">Sale</string>
    <string name="send_to_supplier">Send to Supplier</string>
    <string name="increase_qty">Increase QTY</string>
    <string name="available_qty">Available: </string>
    <string name="sold_qty">Sold: </string>
    <string name="choose_img">Choose Image</string>
    <string name="qty">QTY</string>
    <string name="empty_value">You cannot have empty values!</string>
</resources>
